[package]
name = "single_decree_paxos_deterministic_simulation_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
quickcheck = "1.0.3"
uuid = { version = "1.11.0", features = ["v4"] }
